# agentic-rag-gym

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  agentic-rag-for-aerospace-research.ipynb  docker-compose.yml  inference.py  main.py  openenv.yaml  pyproject.toml  test_hf_gym.py  train.py
.github/workflows/: ci.yml
agentic_rag_os/: .env.example  Dockerfile  __init__.py  app.py  cloudbuild.yaml  config.py  database.py  docker-compose.yml  requirements.txt  run.py
agentic_rag_os/api/: auth.py  deps.py  projects.py  rewards.py  users.py
agentic_rag_os/docs/: __init__.py  architecture.md  deployment.md
agentic_rag_os/models/: project.py  reward_config.py  user.py
agentic_rag_os/services/: auth_service.py  rag_service.py  rewards_service.py
documents/: architecture.md  component_diagram.md  data_flow.md  reward_function.md
domains/: __init__.py
domains/aerospace/: __init__.py  config.py  graders.py  knowledge_base.py  tasks.py
domains/legal_research/: __init__.py  config.py  graders.py  knowledge_base.py  tasks.py
plots/: eval_results.json
rag_master/: __init__.py  adapters.py  agents.py  config.py  database.py  llm_client.py  logging_config.py  models.py  orchestrator.py  retriever.py  rewards.py
server/: __init__.py  app.py  models.py  ui.py
tests/: __init__.py  test_config.py  test_domain.py  test_grader_exploits.py  test_graders.py  test_integration.py  test_models.py  test_orchestrator.py  test_rewards.py  test_server.py
training/: __init__.py  config.py  dataset.py  evaluate.py  reward.py
(+6 files in other folders)
