[project]
name = "agentic-rag-gym"
version = "1.0.0"
description = "Agentic RAG Gym - A reinforcement learning environment for training AI agents on Retrieval-Augmented Generation tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "williyam" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "gradio>=5.0.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=rag_master --cov=server --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101", "S104"]

[tool.hatch.build.targets.wheel]
packages = ["rag_master", "server", "domains"]

[tool.mypy]
python_version = "3.10"
strict = true
